src/main/java/com/example/library_application/task1_srp/errors/CoreError.java
package com.example.library_application.task1_srp.errors;

import lombok.AllArgsConstructor;
import lombok.Getter;

@AllArgsConstructor
@Getter
public class CoreError {
    private String field;
    private String message;

}
